--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,7 +9,8 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{# Je recupere le name de le controller#}
+    <h1>Hello {{name}}! ✅</h1>
 
     This friendly message is coming from:
     <ul>
@@ -18,3 +19,4 @@
     </ul>
 </div>
 {% endblock %}
+
