--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,13 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ name }}</h1>
+    <h1>Hello {{ name  }}</h1>
+
+    {% if user.isConnected %}
+        <button>Déconnexion</button>
+        {% else %}
+            <button>Connexion</button>
+    {% endif %}
 
 </div>
 {% endblock %}
