Boucle exemple 3 - La variable Loop et Calcul
pas de commentaire pour plus d'info aller sur
TWIG -LOOP

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,13 +14,20 @@
     <h2>Nos Jeux</h2>
 
     <hr>
-    {# Le nom game n'a pas d'importance c'est une variable qui n'existe que dans cette boucle 
-     par contre games viens de la vue , c'est notre tableau   #}
-    {% for game in games %}
+   
+    {% for game,multi in games %}
 
-        <h3>{{game}}</h3>
+        <p>itération: {{ loop.index }} </p>
+        <p>itération a partir de 0 : {{ loop.index0 }}</p>
 
-        <p>prix</p>
+        <h3>Titre: {{ game }} </h3>
+        <h4>Multi: {{ multi }} </h4>
+
+        {# Calcul  exemple #}
+        <h4>Multi: {{ multi * 0.2 }}</h4>
+        <h4>Multi: {{ multi + 72 }}</h4>
+
+       
 
     {% endfor %}
 
