--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,25 +11,12 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ name  }}</h1>
-    <h2>Nos Jeux</h2>
 
-    <hr>
-   
-    {% for game,multi in games %}
-
-        <p>itération: {{ loop.index }} </p>
-        <p>itération a partir de 0 : {{ loop.index0 }}</p>
-
-        <h3>Titre: {{ game }} </h3>
-        <h4>Multi: {{ multi }} </h4>
-
-        {# Calcul  exemple #}
-        <h4>Multi: {{ multi * 0.2 }}</h4>
-        <h4>Multi: {{ multi + 72 }}</h4>
-
-       
-
-    {% endfor %}
+     <ul>
+        {% for i in 0..10 %}
+            <li>Element: {{ i}}</li>
+        {% endfor %}
+   </ul>
 
 </div>
 {% endblock %}
