Les Pipes | Filters
Filtre de transformation durant l'interpolation
joue sur les majuscules

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,11 +12,18 @@
 <div class="example-wrapper">
     <h1>Hello {{ name  }}</h1>
 
-     <ul>
-        {% for i in 0..10 %}
-            <li>Element: {{ i}}</li>
-        {% endfor %}
-   </ul>
+    {# brute de pomme sans filtre #}
+    <p>{{city}}</p>
+
+    <hr>
+
+    {# Le contenu est ecrit en majuscule / GOTHAM #}
+    <p>{{city | upper}}</p>
+
+    <hr>
+
+    {# La 1er lettre est en majuscule #}
+    <p>{{city | title}}</p>
 
 </div>
 {% endblock %}
