--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,22 +1,37 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Hello !{% endblock %}
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper { color:red; margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ name  }}</h1>
+    <h1>Hello {{ name }}</h1>
 
-    {% set item = {"nom": "pomme", "forme": "ronde", "poids": 200 } %}
+    {% set michel = {"name": "Michel", "age": 14} %}
+    {% set zak = {"name": "zAK", "age": 33} %}
+    {% set david = {"name": "daVID", "age": null} %}
+    {% set robert = {"name": "Robert", "age": 34} %}
+    {% set users = {michel,zak,david,robert} %}
 
-    <p>Name: {{item.nom}}</p>
-    <p>Shape: {{item.forme}}</p>
-    <p>Weight: {{item.poids}} g.</p>
+    {% for user in users %}
 
+        <p>Name: {{user.name | title}} </p>
+       
+        {% if user.age %}
+            <p>Age: {{user.age}}</p>   
+         {% else %}
+            <p>Age: Undefined</p>
+        {% endif %}
+
+        <hr> 
+
+    {% endfor %} 
+
+      
 </div>
 {% endblock %}
