--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,52 +1,3 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hello !
-{% endblock %}
-
-{% block body %}
-	<style>
-		.example-wrapper {
-			color: red;
-			margin: 1em auto;
-			max-width: 800px;
-			width: 95%;
-			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
-		}
-	</style>
-
-	<div class="example-wrapper">
-		<h1>Hello
-			{{ name }}</h1>
-
-		{#Je crée des variable de Twig rien dans le controller  #}
-		{% set michel = {"name": "Michel", "age": 14, "cheveux": "Noir"} %}
-		{% set zak = {"name": "zAK", "age": 33, "cheveux": "rouge"} %}
-		{% set david = {"name": "daVID", "age": null, "cheveux": "gris"} %}
-		{% set nicolas = {"name": "Nicolas", "age": 34, "cheveux": "bleu"} %}
-		{% set users = {michel,zak,david,nicolas} %}
-
-		{# je boucle sur mon tableau TWIG(user) comme un tableau venant du controller en php #}
-		{% for user in users %}
-            {# J'utile un filtre pour etre sur que l'affichage soit toujours correct (TITLE) #}
-			<p>Name:{{user.name | title}}</p>
-
-			{% if user.age %}
-				<p>Age:{{user.age}}</p>
-			{% else %}
-				<p>Age: NC (non communiqué)</p>
-			{% endif %}
-
-            {#méthode pour ajouter plusieur vaariable et toujour le mettre a l'exterieur de la boucle #}
-            <p>cheveux:{{user.cheveux | title}}</p>
-
-			<hr>
-
-		{% endfor %}
-
-
-	</div>
-{% endblock %}
+<title>YesCode - Accueil</title>
+<h1>Bienvenue sur Yes Code - Bannière</h1>
+<h2>Page d'accueil</h2>
