--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>YesCode - {% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        <h1></h1>
+        <h1>Bienvenue sur Yes Code - Bannière</h1>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
