--- a/templates/home/articles.list.html.twig
+++ b/templates/home/articles.list.html.twig
@@ -1,4 +1,4 @@
-<title>YesCode - Nos Articles</title>
-<h1>Bienvenue sur Yes Code - Bannière</h1>
-<h2>Nos articles</h2>
+{% extends "base.html.twig" %}
+{% block title %}Nos Articles{% endblock %}
+{% block body %}<h2>Nos articles</h2>{% endblock %}
 
