--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,3 +1,4 @@
-<title>YesCode - Accueil</title>
-<h1>Bienvenue sur Yes Code - Bannière</h1>
-<h2>Page d'accueil</h2>
+{% extends "base.html.twig" %}
+{% block title %}Accueil{% endblock %}
+{% block body %}<h2>Page d'accueil</h2>{% endblock %}
+
