--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,3 +2,7 @@
 {% block title %}Accueil{% endblock %}
 {% block body %}<h2>Page d'accueil</h2>{% endblock %}
 
+{% block bidule %}
+    <p>Surcharge du Block Bidule de la base </p>
+{% endblock %}
+
