TWIG - fonction block
Detection d'une surcharge de block avec la fonction block de twig

--- a/templates/home/articles.list.html.twig
+++ b/templates/home/articles.list.html.twig
@@ -1,4 +1,15 @@
 {% extends "base.html.twig" %}
+
 {% block title %}Nos Articles{% endblock %}
-{% block body %}<h2>Nos articles</h2>{% endblock %}
+
+{% block body %}
+    <h2>Nos Articles</h2>
+
+    {% if block ("footer") %}
+     <p>tu as refait un footer ? PK ?</p>
+    {% endif %}
+
+{% endblock %}
+
+{% block footer %}Je suis un footer {% endblock %}
 
