--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,10 @@
 
 		{% block body %}{% endblock %}
 		{% block javascripts %}{% endblock %}
+
+        <footer>
+        {% block footer %}Copyright - 2021 - loicPothin{% endblock %}
+        </footer>
 	</body>
 
 </html>
