--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,8 +1,16 @@
 {% extends "base.html.twig" %}
-{% block title %}Accueil{% endblock %}
-{% block body %}<h2>Page d'accueil</h2>{% endblock %}
 
-{% block bidule %}
-    <p>Surcharge du Block Bidule de la base </p>
+{% block title %}Accueil{% endblock %}
+
+{% block body %}
+    <h2>Page d'accueil</h2>
+
+    <a href="{{ path("articles_list")}}">
+        Vers les articles
+    </a>
+
 {% endblock %}
+
+
+
 
