--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
-		<title>YesCode - {% block title %}{% endblock %}</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous"/>
+		<title>YesCode -
+			{% block title %}{% endblock %}
+		</title>
 		{% block stylesheets %}{% endblock %}
 	</head>
+
 	<body>
-		
-
+		{% include "partials/header.html.twig" %}
 		{% block body %}{% endblock %}
+
 		{% block javascripts %}{% endblock %}
-
-        
+		
+		
+		{% include "partials/footer.html.twig" %}
+		{% include "partials/scripts.html.twig" %}
 	</body>
-
 </html>
