--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,6 +15,8 @@
         </p>
     </div>
 
+    {{ dump(fruits) }}
+
     <h2 class="text-center h1">Les derniers articles</h2>
 
     {% set symfony = {"title": "symfony", "intro": "Symfony est un framework PHP complet", "author":"Fabien Potencier", "image":"https://neo7.fr/wp-content/uploads/2018/01/symfony-logo.png"} %}
@@ -35,6 +37,8 @@
 
     </div>
 </div>
+
+
 
 
 
