--- a/templates/partials/card.article.html.twig
+++ b/templates/partials/card.article.html.twig
@@ -6,13 +6,19 @@
           <p class="card-text">{{article.intro}}</p>
           <a href="#" class="btn btn-primary rounded">Lire la suite</a>
           <div class="my-3">
-              <a href="#" class="card-link">{{article.author}}</a>
+              <a href="#" class="card-link">Loic Pothin</a>
           </div>
         </div>
         <div class="card-footer text-muted">
+        {% if article.createdAt %}
+          {{ article.createdAt | date('d/m/Y à H:i')}}
+          {% else %}
           Il y a 2 jours
+        {% endif %} 
         </div>
     </div>
 </div>
+
+
 
 
