--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -16,7 +16,7 @@
           </a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="">
+          <a class="nav-link" href="{{ path('articles_index') }}">
             <i class="fas fa-newspaper"></i>
             Articles
           </a>
