--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,19 +17,11 @@
 
     <h2 class="text-center h1">Les derniers articles</h2>
 
-    {% set symfony = {"title": "symfony", "intro": "Symfony est un framework PHP complet", "image":"https://neo7.fr/wp-content/uploads/2018/01/symfony-logo.png", "createdAt": date () } %}
-     
-    {% set angular = {"title": "angular", "intro": "Angular le framework de Google", "image":"https://angular.io/assets/images/logos/angular/angular.svg", "createdAt": date () }%}
-
-    {% set laravel = {"title": "laravel", "intro": "Laravel est un framework PHP aussi", "image":"https://jf-blog.fr/wp-content/uploads/2018/07/laravel-logo.png", "createdAt": date () } %}
-    
-    {% set articles = {'angular':angular, 'symfony':symfony, 'laravel':laravel} %}
-
     <div class=" row flex-lg-row flex-xl-row flex-column">
 
         {% for article in articles %}
 
-            {% include "partials/card.article.html.twig" with article   %}
+            {% include "partials/card.article.html.twig" %}
             
         {% endfor %}
 
