--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,6 +17,9 @@
 
     <h2 class="text-center h1">Les derniers articles</h2>
 
+    {# <img src="{{image}}"> #}
+    {{content | raw}}
+
     <div class=" row flex-lg-row flex-xl-row flex-column">
 
         {% for article in articles %}
