--- a/templates/partials/card.article.html.twig
+++ b/templates/partials/card.article.html.twig
@@ -4,7 +4,7 @@
         <img height="350px" class="rounded-circle border border-success m-2" src="{{article.image}}" alt="Card image">
         <div class="card-body">
           <p class="card-text">{{article.intro}}</p>
-          <a href="#" class="btn btn-primary rounded">Lire la suite</a>
+          <a href="{{path('article_show' , {'slug': article.slug}) }}"  class="btn btn-primary rounded">Lire la suite</a>
           <div class="my-3">
               <a href="#" class="card-link">Loic Pothin</a>
           </div>
