formulaire Step 1 - Avant de mettre le bouton

--- a/templates/article/create.html.twig
+++ b/templates/article/create.html.twig
@@ -6,6 +6,11 @@
  
     <div class="container">
         <h1 class="my-5">Créer un article</h1>
+
+         {{form(form)}}
      </div>
+
+
+    
 
 {% endblock %}
