Form-Customisation-Label Placeholder
modification du visuel dans ArticleType
doc:
Form Types Reference

--- a/templates/article/create.html.twig
+++ b/templates/article/create.html.twig
@@ -5,9 +5,13 @@
 {% block body %}
  
     <div class="container">
-        <h1 class="my-5">Créer un article</h1>
+        <h1 class="my-5 text-center ">Créer un article</h1>
 
-         {{form(form)}}
+        <div class="col-8 m-auto ">
+          {{form(form)}}
+        </div>
+
+        
      </div>
 
 
