fORM Submit BDD et Redirection
la redirection ce fait dans ArticleController

--- a/templates/article/create.html.twig
+++ b/templates/article/create.html.twig
@@ -4,14 +4,13 @@
 
 {% block body %}
  
-    <div class="container">
-        <h1 class="my-5 text-center ">Créer un article</h1>
+    <div class="container ">
+        <h1 class="my-5 text-center text-white bg-dark p-2 rounded-pill">Créer un article</h1>
 
-        <div class="col-8 m-auto ">
+        <div class="col-8 m-auto">
           {{form(form)}}
         </div>
-
-        
+  
      </div>
 
 
