--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -7,17 +7,17 @@
     <div class="container">
         <h1 class="my-5 text-center">{{article.title}}</h1>
 
-        <p class="text-left" style="color: red;">écris le:
+        <p class="text-left">écris le:
              {{ article.createdAt | date('d/m/Y à H:i')}}
         </p>
 
-        <div class="my-2 border text-center" style="background-color: #eee;">
+        <div class="my-2 border text-center text-uppercase" style="background-color: #eee;">
           <p>{{article.intro}}</p>
         </div>
 
 
         <div class=" text-center">
-          <img class="w-50  p-2" src="{{article.image}}" alt="photo de l'article {{article.title}}">
+          <img class="w-50 p-2" src="{{article.image}}" alt="photo de l'article {{article.title}}">
         </div>
 
         <div class="my-5 text-center">
