Système de Flash en place
flash mis dans le header en fin de page et ajouter
$this->addFlash dans ArticleController

permet d'aaficher des message d'alerte

--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -64,3 +64,21 @@
 
     </div>
   </nav>
+
+ 
+{# Systeme de FLASH en place message d'alerte #}
+
+{% for label,messages in app.flashes %}
+	<div class="container text-center my-5 ">
+		<div class="alert alert-{{ label }}">
+			{% for message in messages %}
+				<p>{{message | raw }}</p>
+			{% endfor %}
+		</div>
+	</div>
+{% endfor %}
+
+{# Fin du FLASH #}
+
+
+
