--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container">
 
-    <div class="jumbotron text-center my-5 shadow">
+    <div class="jumbotron text-center my-5 shadow btn-info ">
         <h1 class="display-4">Bienvenue sur YesCode !</h1>
         <p class="lead">Ici ça parle de code, langages, technos de demain </p>
         <hr class="my-4">
@@ -18,7 +18,7 @@
 
     <h2 class="text-center h1">Les derniers articles</h2>
 
-    <div class=" row flex-lg-row flex-xl-row flex-column">
+    <div class=" row flex-lg-row flex-xl-row flex-column font-italic">
 
         {% for article in articles %}
 
