--- a/templates/partials/card.article.html.twig
+++ b/templates/partials/card.article.html.twig
@@ -1,12 +1,12 @@
 <div class="col-xl-4 col-lg-4 col-md-8 col-sm-12 m-auto text-center">
-    <div class="card bg-light my-5 shadow ">
+    <div class="card bg-info my-5 shadow ">
         <h3 class="card-header">{{article.title | title}}</h3>
-        <img height="350px" class="rounded-circle border border-success m-2" src="{{article.image}}" alt="Card image">
+        <img height="350px" class="rounded-circle border border-danger m-2" src="{{article.image}}" alt="Card image">
         <div class="card-body">
           <p class="card-text">{{article.intro}}</p>
-          <a href="{{path('article_show' , {'slug': article.slug}) }}"  class="btn btn-primary rounded">Lire la suite</a>
+          <a href="{{path('article_show' , {'slug': article.slug}) }}"  class="btn btn-primary rounded-pill">Lire la suite</a>
           <div class="my-3">
-              <a href="#" class="card-link">Loic Pothin</a>
+              <a href="#" class="card-light">Loic Pothin</a>
           </div>
         </div>
         <div class="card-footer text-muted">
