--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,10 +1,10 @@
-<footer class="mt-5 bg-dark py-3 text-center text-white">
+<footer class="mt-5 bg-dark py-3 text-center">
     <div class=" justify-content-center">
-        <p class="h3 mb-3">Copyright YesCode - {{"now" | date('Y')}}</p>
+        <p class="h3 mb-3 ">Copyright YesCode - {{"now" | date('Y')}}</p>
         <div>
-            <a href="#"><i class="fab fa-facebook fa-2x mx-5"></i></a>
-            <a href="#"><i class="fab fa-github fa-2x mx-5"></i></a>
-            <a href="#"><i class="fab fa-linkedin fa-2x mx-5 "></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x mx-5 text-info"></i></a>
+            <a href="#"><i class="fab fa-github fa-2x mx-5 text-info"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-2x mx-5 text-info "></i></a>
         </div>
 
     </div>
