--- a/templates/article/create.html.twig
+++ b/templates/article/create.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
  
     <div class="container ">
-        <h1 class="my-5 text-center text-white bg-dark p-2 rounded-pill">Créer un article</h1>
+        <h1 class="my-5 text-center text-white bg-info p-2 rounded-pill">Créer un article</h1>
 
-        <div class="col-8 m-auto">
+        <div class="col-8 m-auto ">
           {{form(form)}}
         </div>
   
